Pull back dockerfile