@@ -1,4 +1,12 @@
-FROM structurizr/structurizr:latest
+FROM structurizr/structurizr:latest AS structurizr
+
+FROM eclipse-temurin:21-jre
+
+ENV PORT=8080
+
+COPY --from=structurizr /usr/local/structurizr.war /usr/local/structurizr.war
+
+ENTRYPOINT ["sh", "-c", "java -Dserver.port=$PORT --enable-native-access=ALL-UNNAMED -jar /usr/local/structurizr.war"]
 
 # Install JRuby for REPL
 
